--- a/index.html
+++ b/index.html
@@ -154,9 +154,10 @@
 			Business Development and Supply Chain Management at multinational companies. Engaged 120+ local and 10+ international 
 			entities to obtain 35% growth in revenue. Operating Supply Chain (Export-Import) Process 20% faster and reducing 8-10% operational 
 			expenses. From 2015 to present I managed the enlistment of 03 FDI Companies in Bangladesh with all kinds of regulatory affairs at RJSC, BIDA, 
-			Bangladesh Bank, DOE, CCI&E, DNCC, FSCD, NBR, Customs, and Ministries.
-			<br>
-			Experience and Impact : 
+			Bangladesh Bank, DOE, CCI&E, DNCC, FSCD, NBR, Customs, and Ministries. </p>
+			<p> </p>
+                <h3> Experience and Impact   </h3>
+			 <p>
 International Business Development • Operation Management • Supply Chain Management • Financial Analysis • Export • Import • LC and Bonds • Trade Commercial • Compliance • Regulatory Affairs. 
 
                 </p>
