--- a/index.html
+++ b/index.html
@@ -157,8 +157,10 @@
 			Bangladesh Bank, DOE, CCI&E, DNCC, FSCD, NBR, Customs, and Ministries. </p>
 			<p> </p>
                 <h3> Experience and Impact   </h3>
+		    
 			 <p>
-International Business Development • Operation Management • Supply Chain Management • Financial Analysis • Export • Import • LC and Bonds • Trade Commercial • Compliance • Regulatory Affairs. 
+• International Business Development • Operation Management • Supply Chain Management • Financial Analysis • Export 
+				 • Import • LC and Bonds • Trade Commercial • Compliance • Regulatory Affairs. 
 
                 </p>
             </div>
