--- a/index.html
+++ b/index.html
@@ -330,8 +330,8 @@ Department: Management
                 <h2><br>
                     Extra Curricular  Activities.</h2>
                 <p class="lead">
-				I was actively engaged with verious academic, social charity and philanthropy based community 
-				platform as my extra curricular activities from my student age. 
+				I was actively engaged with various academic, social charity and philanthropy-based community 
+				platform as my extracurricular activities from my student age. 
 				</p>
             </div>
 
@@ -347,7 +347,7 @@ Department: Management
                         </div>
                         <div class="timeline__desc">
                             <p>
-				BUBT IT CLUB started its munificent journey in April, 2011. By the earnest endeavor of 
+				BUBT IT CLUB started its munificent journey in April 2011. By the earnest endeavour of 
 				    students and teachers of different departments led by CSE, BUBT IT CLUB was established with the aim of 
 				    developing IT knowledge among the students of all disciplines. 
 				</p>
