--- a/index.html
+++ b/index.html
@@ -463,7 +463,7 @@
             </div>
             <div class="col-block stats__col">
                 <div class="stats__count">
-                    5
+                    8
                 </div>
                 <h4>Years Experiance</h4> 
             </div>
@@ -490,7 +490,7 @@
                 <h1>See My Latest Projects.</h1>
                 
                 <p class="lead">
-		    	Here you can check out my latest work on my previous workplace. Discover my more project to <a href="#">click here.</a>  
+		    	Here you can check out my latest work on my previous workplace. Discover my more projects to <a href="https://www.behance.net/SamsSojol">click here.</a>  
 		    </p>
             </div>
         </div>
